<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.android.tic_tac_toe.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
    <Button
        android:id="@+id/continuegame"
        style="@style/button"
        android:text="@string/continuegame" />

    <Button
        android:id="@+id/newgame"
        style="@style/button"
        android:layout_marginTop="36dp"
        android:text="@string/newgame" />

    <Button
        android:id="@+id/instructions"
        style="@style/button"
        android:layout_marginTop="36dp"
        android:text="@string/instructions" />

    <Button
        android:id="@+id/exit"
        style="@style/button"
        android:layout_marginTop="36dp"
        android:text="@string/exit" />
    </LinearLayout>

</ScrollView>
